# ClassBanners

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
assets/: .gitkeep
data/: topics.json
src/classbanners/: __init__.py  banner.py  cli.py  generator.py
tests/: __init__.py  test_banner.py  test_cli.py  test_generator.py
